--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body {
 <div id="example"></div>
 
 <script src="dist/js/jquery.min.js"></script>
-<script src="/dist/js/pym_v1.3.2.js"></script>
+<script src="dist/js/pym_v1.3.2.js"></script>
 <script type="text/javascript">
   var pymParent = new pym.Parent('example', 'assets/package/index.html', {});
   // var pymParent = new pym.Parent('example', 'assets/package/test.html', {});
