--- a/assets/package/index.html
+++ b/assets/package/index.html
@@ -34,7 +34,7 @@
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
 
-  <script src="/dist/js/pym_v1.3.2.js"></script>
+  <script src="../../dist/js/pym_v1.3.2.js"></script>
 
   <script type="text/javascript">
     var pymChild = new pym.Child();
