add in conclusion

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
     
-	{% include first.html id="first" next1="decision3" %}
+	{% include first.html id="first" next1="introduction" %}
 	{% include introduction.html id="introduction" next1="scenario1" %}
 	{% include scenario1.html id="scenario1" next1="decision1" %}	
 	{% include decision1.html id="decision1" next1="outcome1a" next2="outcome1b" %}
