--- a/index.html
+++ b/index.html
@@ -74,6 +74,31 @@
     <!-- Inject content here -->
     
     	<div id="first" class="div-container w-hidden-tiny active">
+
+  <a href="https://howhousingmatters.org/" class="div-logo-global hhm w-inline-block" data-ix="hmm-home-link">
+    <div class="div-hhm-home-link-wrapper">
+      <div class="div-hhm-home-link-inner"><img src="images/back-arrow.svg" class="img-back-arrow">
+        <div class="block-back-link">
+          <div class="txt-back-to">Back To</div>
+          <div>How Housing Matters</div>
+        </div>
+      </div>
+    </div>
+  </a>
+  <div class="div-global-share">
+    <ul class="ul-share-tools w-list-unstyled">
+      <li class="li-share">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//urbn.is/rightmoves" target="_blank"><div class="div-share-icn-wrapper"><img src="images/share-facebook.svg" class="img-share-icn facebook"></div></a>
+      </li>
+      <li class="li-share">
+        <a href="https://twitter.com/intent/tweet?text=You%27re%20the%20head%20of%20a%20family%20with%20limited%20means%20%26%20no%20government%20assistance.%20Your%20goal%3A%20make%20a%20decent%20life%20for%20your%20family.%20How%20does%20housing%20affect%20that%3F%20Play%20Right%20Moves%2C%20a%20game%20from%20%40Housing360%3A%20https%3A%2F%2Furbn.is%2Frightmoves" target="_blank"><div class="div-share-icn-wrapper"><img src="images/share-twitter.svg" class="img-share-icn"></div></a>
+      </li>
+      <li class="li-share">
+        <a href="mailto:%20?Subject=New game from How Housing Matters&Body=Hi! I thought you'd be interested in this new game from How Housing Matters: “The Right Moves” http://urbn.is/rightmoves" target="_blank"><div class="div-share-icn-wrapper"><img src="images/share-email.svg" class="img-share-icn"></div></a>
+      </li>
+    </ul>
+  </div>
+
   <div class="div-dimmer"></div>
   <div class="div-start-screen">
     <div class="btn-start-back">
@@ -83,7 +108,7 @@
 
       <!-- <img src="images/btn-start-blue.svg" class="img-start-btn"> -->
 
-  	</div><img src="images/title.svg" alt="Right Moves" class="img-title"><img src="images/tagline.svg" alt="How does housing affect your goal of making a decent life for your family?" class="img-tagline">
+  	</div><img src="images/title.svg" alt="Right Moves" class="img-title"><img src="images/tagline-new.svg" alt="How does housing affect your goal of making a decent life for your family?" class="img-tagline">
     <div class="div-start-buildings"><img src="images/building-gold.svg" class="img-building-gold"><img src="images/building-red.svg" class="img-building-red"><img src="images/building-green.svg" class="img-building-green"><img src="images/building-blue.svg" class="img-building-blue"></div>
   </div>
   <div class="div-global-background css-gradient"></div>
@@ -1199,7 +1224,31 @@
   </div>  
 	<div id="conclusion" class="div-container">
 
-  <a href="index.html" class="div-logo-global w-inline-block"><img src="images/title.svg"></a>
+  <!-- <a href="index.html" class="div-logo-global w-inline-block"><img src="images/title.svg"></a> -->
+    <div class="div-global-share">
+    <ul class="ul-share-tools w-list-unstyled">
+      <li class="li-share">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//urbn.is/rightmoves" target="_blank"><div class="div-share-icn-wrapper"><img src="images/share-facebook.svg" class="img-share-icn facebook"></div></a>
+      </li>
+      <li class="li-share">
+        <a href="https://twitter.com/intent/tweet?text=You%27re%20the%20head%20of%20a%20family%20with%20limited%20means%20%26%20no%20government%20assistance.%20Your%20goal%3A%20make%20a%20decent%20life%20for%20your%20family.%20How%20does%20housing%20affect%20that%3F%20Play%20Right%20Moves%2C%20a%20game%20from%20%40Housing360%3A%20https%3A%2F%2Furbn.is%2Frightmoves" target="_blank"><div class="div-share-icn-wrapper"><img src="images/share-twitter.svg" class="img-share-icn"></div></a>
+      </li>
+      <li class="li-share">
+        <a href="mailto:%20?Subject=New game from How Housing Matters&Body=Hi! I thought you'd be interested in this new game from How Housing Matters: “The Right Moves” http://urbn.is/rightmoves" target="_blank"><div class="div-share-icn-wrapper"><img src="images/share-email.svg" class="img-share-icn"></div></a>
+      </li>
+    </ul>
+    </div>
+    <a href="https://howhousingmatters.org/" class="div-logo-global hhm w-inline-block" data-ix="hmm-home-link">
+      <div class="div-hhm-home-link-wrapper">
+        <div class="div-hhm-home-link-inner"><img src="images/back-arrow.svg" class="img-back-arrow">
+          <div class="block-back-link">
+            <div class="txt-back-to">Back To</div>
+            <div>How Housing Matters</div>
+          </div>
+        </div>
+      </div>
+    </a>
+
     <div class="div-title conclusion">
       <div class="div-screen-title">
         <h2>.</h2>
@@ -1245,6 +1294,18 @@
                     <li class="li-item-resource">Economic progress for voucher households<span class="span-resources-arrow"><a href="https://howhousingmatters.org/articles/opportunities-asset-building-subsidized-housing/" target="_blank"></a></span></li>
                   </ul>
                 </div>
+              </div>
+            </div>
+            <div class="slide-outcome w-slide">
+              <div class="div-credits">
+                <div class="block-credit"><span class="credit-cat">Design:</span> John Wehmann</div>
+                <div class="block-credit"><span class="credit-cat">Development: </span>Daniel Wood</div>
+                <div class="block-credit"><span class="credit-cat">Editing:</span> David Hinson</div>
+                <div class="block-credit"><span class="credit-cat">Writing:</span> Emily Peiffer, Maya Brennan, and Kimberly Burrowes</div>
+              </div>
+              <div class="div-funder-block">
+                <p><a href="#" class="a-funding-block"><em>View this project on GitHub</em></a></p>
+                <p>This feature was funded by the John D. and Catherine T. MacArthur Foundation. We are grateful to them and to all our funders, who make it possible for Urban to advance its mission. The views expressed are those of the authors and should not be attributed to the Urban Institute, its trustees, or its funders. Funders do not determine research findings or the insights and recommendations of our experts. More information on our funding principles is available <a href="#" class="a-funding-block">here</a>. Read our terms of service <a href="#" class="a-funding-block">here</a>.</p>
               </div>
             </div>
           </div>
